# playground

./: .clang-format  .gitignore
AutoHideMenuBarDemo/: AutoHideMenuBarDemo.sln
CMakeExternalProjDemo/: .gitignore  CMakeLists.txt
CSharpTour/: CSharpTour.sln
CalcTileIndexDemo/: README.txt  TransformClassBing.h  TransformClassSlippy.h  TransformClassTMS.h  widget.cpp  widget.h  widget.ui
CameraDemo/: CameraDemo.sln
CopyDirectoryDemo/: CopyDirectoryDemo.sln
DeleteVoidPointerDemo/: DeleteVoidPointerDemo.sln
DetectNetworkTypeDemo/: DetectNetworkTypeDemo.sln
EndianDemo/: main.cpp
GameEngineFromScratch/: main.c
IdBasedTrDemo/: 0-update_languages.bat  1-release_languages.bat  CMakeLists.txt  main.cpp  widget.cpp  widget.ui
IdBasedTrDemo/i18n/: app_en_GB.ts  app_en_US.qm  app_en_US.ts  app_zh_CN.qm  app_zh_CN.ts  app_zh_HK.qm  app_zh_HK.ts
IdBasedTrDemo/utils/: InternationalUtil.cpp  InternationalUtil.h
IrregularWindowDemo/: IrregularWindowDemo.sln
LoadingDemo/: LoadingDemo.sln
MapDownloader/: .gitignore  DownloadManager.cpp  DownloadManager.h  MapDownloader.pro  widget.cpp  widget.h  widget.ui
MeetingManager/: .clang-format  MeetingManager.sln
PngAnimationExample/: PngAnimationExample.sln
asio_demo/: CMakeLists.txt
asio_demo/asio-1.16.1/: Makefile  config.status
asio_demo/asio-1.16.1/include/: Makefile
asio_demo/asio-1.16.1/src/: Makefile
asio_demo/asio-1.16.1/src/examples/cpp03/: Makefile
asio_demo/asio-1.16.1/src/examples/cpp11/: Makefile
asio_demo/asio-1.16.1/src/examples/cpp11/allocation/: server
asio_demo/asio-1.16.1/src/examples/cpp11/allocation/.deps/: server.Po
asio_demo/asio-1.16.1/src/examples/cpp11/buffers/: reference_counted
asio_demo/asio-1.16.1/src/examples/cpp11/buffers/.deps/: reference_counted.Po
asio_demo/asio-1.16.1/src/examples/cpp11/chat/: chat_client  chat_server
asio_demo/asio-1.16.1/src/examples/cpp11/chat/.deps/: chat_client.Po  chat_server.Po
asio_demo/asio-1.16.1/src/examples/cpp11/echo/: async_tcp_echo_server  async_udp_echo_server  blocking_tcp_echo_client  blocking_tcp_echo_server  blocking_udp_echo_client  blocking_udp_echo_server
asio_demo/asio-1.16.1/src/examples/cpp11/echo/.deps/: async_tcp_echo_server.Po  async_udp_echo_server.Po  blocking_tcp_echo_client.Po  blocking_tcp_echo_server.Po  blocking_udp_echo_client.Po  blocking_udp_echo_server.Po
asio_demo/asio-1.16.1/src/examples/cpp11/executors/: actor  bank_account_1  bank_account_2  fork_join  pipeline  priority_scheduler
asio_demo/asio-1.16.1/src/examples/cpp11/executors/.deps/: actor.Po  bank_account_1.Po  bank_account_2.Po  fork_join.Po  pipeline.Po  priority_scheduler.Po
asio_demo/asio-1.16.1/src/examples/cpp11/fork/: daemon  process_per_connection
asio_demo/asio-1.16.1/src/examples/cpp11/fork/.deps/: daemon.Po  process_per_connection.Po
asio_demo/asio-1.16.1/src/examples/cpp11/futures/: daytime_client
asio_demo/asio-1.16.1/src/examples/cpp11/futures/.deps/: daytime_client.Po
asio_demo/asio-1.16.1/src/examples/cpp11/http/server/: http_server
asio_demo/asio-1.16.1/src/examples/cpp11/http/server/.deps/: connection.Po  connection_manager.Po  main.Po  mime_types.Po  reply.Po  request_handler.Po  request_parser.Po  server.Po
asio_demo/asio-1.16.1/src/examples/cpp11/invocation/: prioritised_handlers
asio_demo/asio-1.16.1/src/examples/cpp11/invocation/.deps/: prioritised_handlers.Po
asio_demo/asio-1.16.1/src/examples/cpp11/iostreams/: http_client
asio_demo/asio-1.16.1/src/examples/cpp11/iostreams/.deps/: http_client.Po
asio_demo/asio-1.16.1/src/examples/cpp11/local/: connect_pair  iostream_client  stream_client  stream_server
asio_demo/asio-1.16.1/src/examples/cpp11/local/.deps/: connect_pair.Po  iostream_client.Po  stream_client.Po  stream_server.Po
asio_demo/asio-1.16.1/src/examples/cpp11/multicast/: receiver  sender
asio_demo/asio-1.16.1/src/examples/cpp11/multicast/.deps/: receiver.Po  sender.Po
asio_demo/asio-1.16.1/src/examples/cpp11/nonblocking/: third_party_lib
asio_demo/asio-1.16.1/src/examples/cpp11/nonblocking/.deps/: third_party_lib.Po
asio_demo/asio-1.16.1/src/examples/cpp11/operations/: composed_1  composed_2  composed_3  composed_4  composed_5  composed_6  composed_7  composed_8
asio_demo/asio-1.16.1/src/examples/cpp11/operations/.deps/: composed_1.Po  composed_2.Po  composed_3.Po  composed_4.Po  composed_5.Po  composed_6.Po  composed_7.Po  composed_8.Po
asio_demo/asio-1.16.1/src/examples/cpp11/socks4/: sync_client
asio_demo/asio-1.16.1/src/examples/cpp11/socks4/.deps/: sync_client.Po
asio_demo/asio-1.16.1/src/examples/cpp11/ssl/: client  server
asio_demo/asio-1.16.1/src/examples/cpp11/ssl/.deps/: client.Po  server.Po
asio_demo/asio-1.16.1/src/examples/cpp11/timeouts/: async_tcp_client  blocking_tcp_client  blocking_token_tcp_client  blocking_udp_client  server
asio_demo/asio-1.16.1/src/examples/cpp11/timeouts/.deps/: async_tcp_client.Po  blocking_tcp_client.Po  blocking_token_tcp_client.Po  blocking_udp_client.Po  server.Po
asio_demo/asio-1.16.1/src/examples/cpp11/timers/: time_t_timer
asio_demo/asio-1.16.1/src/examples/cpp11/timers/.deps/: time_t_timer.Po
asio_demo/asio-1.16.1/src/examples/cpp14/: Makefile
asio_demo/asio-1.16.1/src/examples/cpp17/: Makefile
asio_demo/asio-1.16.1/src/tests/: Makefile
asio_demo/cmake_modules/: gcovr.cmake
asio_demo/include/: printer.h  printer2.h  server.h  utils.h
asio_demo/src/: asio_demo.cpp
asio_demo/test/: CMakeLists.txt  tcp_server.h  test_demo.cpp
charts/: readme.txt
coverage_demo/test/: CMakeLists.txt  test_demo.cpp
io_uring_demo/: CMakeLists.txt  io_uring_demo.cpp
ray_tracing/: .gitignore  CMakeLists.txt  README.md  ppm.cpp  ppm_with_vec3.cpp  ray.h
ray_tracing/chapter01/: CMakeLists.txt  chapter01.cpp  chapter01.ppm
ray_tracing/chapter02/: CMakeLists.txt  chapter02.cpp
ray_tracing/chapter03/: CMakeLists.txt  rays.cpp  rays.ppm
ray_tracing/chapter04/: CMakeLists.txt  ray.h  rays.cpp  rays.ppm
ray_tracing/common/include/: vec3.h
variadic-macro-demo/: CMakeLists.txt  variadic_macro_demo.cpp
(+237 files in other folders)
